--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -335,3 +335,11 @@
     display: flex;
     align-items: center;
 }
+
+.main-sidebar{
+    width: 585px;
+}
+
+.content-wrapper, .main-footer{
+    margin-left: 585px;
+}
