--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -336,10 +336,57 @@
     align-items: center;
 }
 
+.skin-blue .wrapper, .skin-blue .main-sidebar, .skin-blue .left-side {
+    background-color: #ffffff;
+}
+
 .main-sidebar{
     width: 585px;
+    background-color: #ffffff;
+    box-shadow: 0 0 30px 0 rgba(35, 40, 72, 0.13);
 }
 
 .content-wrapper, .main-footer{
     margin-left: 585px;
+}
+
+.skin-blue .sidebar-form{
+    border: 0;
+    margin: 0;
+    padding: 15px;
+    background-color: #eaeff4;
+}
+
+
+.select-filter{
+    font-family: Montserrat;
+    font-size: 14px;
+    padding: 10px;
+    background: #ffffff;
+    font-weight: 600;
+    height: auto;
+    border-radius: 6px;
+}
+
+.type-filter{
+    width: calc(23.3333% - 10px);
+    float: left;
+}
+
+.select-filter.used-products-filter{
+    width: 30% !important;
+}
+
+.tags-filter{
+
+}
+
+.sort-by-filter{
+
+}
+
+.select-filter + .select-filter{
+    float: left;
+    width: calc(23.3333% - 10px);
+    margin-left: 10px;
 }
