improved info-block at main-sidebar #4

--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -618,6 +618,10 @@ ul.tag-list li + li{
     padding: 10px 15px;
     background-color: #f7f7f7;
     border-radius: 6px;
+    max-width: 370px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .info-block .news-link{
