--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -517,7 +517,7 @@
     color: #3a444f;
     padding-left: 50px;
     padding-top: 20px;
-    padding-bottom: 0px;
+    padding-bottom: 20px;
     opacity: 0.6;
 }
 
@@ -525,10 +525,16 @@ ul.sidebar-list{
     list-style-type: none;
     padding: 0;
     margin: 0;
+    height: 590px;
+    overflow-y: auto;
 }
 
 ul.sidebar-list li{
 
+}
+
+ul.sidebar-list li:first-child .item{
+    padding-top: 0px;
 }
 
 ul.sidebar-list li h3{
@@ -660,6 +666,12 @@ ul.tag-list li + li{
     z-index: 100;
     border-radius: 50px;
     position: absolute;
+    overflow: hidden;
+    background: #e6ecf3;
+}
+
+.item-image .main-image img{
+    opacity: 0.4;
 }
 
 .item-image .circle-1{
@@ -680,4 +692,9 @@ ul.tag-list li + li{
     z-index: 98;
     border-radius: 50px;
     background: #eaeff4;
+}
+
+.pagination-box {
+    display: flex;
+    justify-content: center;
 }
