--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -698,3 +698,14 @@ ul.tag-list li + li{
     display: flex;
     justify-content: center;
 }
+
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover{
+    background-color: #4182df;
+    border-color: #337ab7;
+}
+
+.pagination>li>a, .pagination>li>span{
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+}
