--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -734,3 +734,7 @@ ul.tag-list li + li{
 .VuePagination__count{
     display: none;
 }
+
+.alertify-notifier .ajs-message.ajs-warning{
+    border-color: #d3d6de;
+}
