implemented basic html structure of address-details/:id page #5

--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -809,3 +809,11 @@ ul.tag-list li + li{
 .sidebar .sidebar-form{
     overflow: initial;
 }
+
+.address-details-container .lab-chain{
+
+}
+
+.address-details-container .address-line{
+
+}
