--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1210,3 +1210,13 @@ a.link-back.arrow-left:hover{
     background-color: #4a90e3;
     color: #fff;
 }
+
+.empty-data-p {
+    margin-top: 15px;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: left;
+    color: #3a444f;
+}
