implemented updating of address customer status on /address-details/:id page #24

--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1225,3 +1225,7 @@ a.link-back.arrow-left:hover{
     text-align: left;
     color: #3a444f;
 }
+
+.alertify-notifier .ajs-message.ajs-success {
+    text-shadow: none !important;
+}
