--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -1321,3 +1321,53 @@ ul.staff-list li .personal-info .name a:hover{
     font-family: Montserrat;
     font-size: 12px;
 }
+
+#personal-modal .modal-dialog{
+    margin-top: 130px;
+    width: 800px;
+}
+
+#personal-modal .person-profile-picture {
+    text-align: center;
+    margin-top: -115px;
+}
+
+#personal-modal .person-profile-picture img {
+    width: 200px;
+    height: 200px;
+    background: #e6f3f9;
+    border-radius: 100px;
+    box-shadow: 0 20px 50px rgba(0,0,0,.2);
+    border: solid 1px rgba(58, 68, 79, 0.05);
+}
+
+#personal-modal h4.modal-title{
+    font-family: Montserrat;
+    font-size: 38px;
+    text-align: center;
+    color: #3a444f;
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+#personal-modal h4.modal-title a{
+    display: inline-block;
+    color: #fff;
+    background: #bbbec2;
+    font-size: 16px;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    border-radius: 14px;
+    text-align: center;
+    transition: background-color 0.1s linear;
+    margin-left: 15px;
+}
+
+#personal-modal h4.modal-title a:hover{
+    background: #4a90e3;
+}
+
+.nav nav-tabs
