--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -313,7 +313,7 @@ a{
     height: 70px;
     display: flex;
     align-items: center;
-    margin-left: 40px;
+    margin-left: 220px;
 }
 
 .nav-search input{
@@ -342,6 +342,15 @@ a{
     height: 70px;
     display: flex;
     align-items: center;
+}
+
+.box-for-logo .header-logo{
+    width: 150px;
+    float: left;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
 }
 
 .skin-blue .wrapper, .skin-blue .main-sidebar, .skin-blue .left-side {
