--- a/resources/assets/css/styles.css
+++ b/resources/assets/css/styles.css
@@ -40,6 +40,14 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+html,
+body,
+.wrapper,
+.content-wrapper{
+    height: 100%;
+    min-height: 100%;
+}
+
 body{
     font-family: Montserrat;
 }
@@ -760,7 +768,7 @@ ul.tag-list li + li{
 #map-element{
     height: 100%;
     width: 100%;
-    min-height: 800px;
+    min-height: 100%;
 }
 
 .content {
